# Doodle

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  CMakeSettings.json  Doodle.code-workspace  DoodleConfig.h  DoodleConfig.h.in  README.md  _vcpkg.json  anzhuang.iss  anzhuang.iss.in  build.cmd  cpp.hint  env.env  fileSynConfig.h.in  imgui.ini  main.cpp  qt5.natvis  requirements.txt  stl.natvis  test_cmake_zh_CN.ts  vcpkg.json
core/: CMakeLists.txt  core_Cpp.h  core_doQt.h  core_global.h  core_resource.qrc
core/filesystem/: CMakeLists.txt
core/proto/: CMakeLists.txt
core/resource/: mayaExport.py  resource.qrc
core/src/: CMakeLists.txt  archiveFactory.cpp  archiveFactory.h  assClass.cpp  assClass.h  assType.cpp  assType.h  assdepartment.cpp  assdepartment.h  assfilesqlinfo.cpp  assfilesqlinfo.h  asstype.cpp  asstype.h  coreDataManager.cpp  coreDataManager.h  coreset.cpp  coreset.cpp.autosave  coreset.h  coresql.cpp  coresql.h  coresqldata.cpp  coresqldata.h  episodes.cpp  episodes.h  ffmpegWrap.cpp  ffmpegWrap.h  fileArchive.cpp  fileArchive.h  fileArchiveMultipleFile.cpp  fileArchiveMultipleFile.h  fileArchiveOneFile.cpp  fileArchiveOneFile.h  filearchive.cpp  filearchive.h  fileclass.cpp  fileclass.h  filesqlinfo.cpp  filesqlinfo.h  filesqlinfo.h.autosave  filetype.cpp  (+32 more)
doodle_GUI/: CMakeLists.txt  doodle_global.h  main.cpp  resource.qrc
doodle_GUI/resource/: icon.tga  qtquickcontrols2.conf  resource.qrc
doodle_GUI/src/: AssDepModel.cpp  AssDepModel.h  AssDepWidget.cpp  AssDepWidget.h  AssTypeModel.cpp  AssTypeModel.h  AssTypeWidget.cpp  AssTypeWidget.h  CMakeLists.txt  ProjectWidget.cpp  ProjectWidget.h  ShotClassModel.cpp  ShotClassModel.h  ShotClassWidget.cpp  ShotClassWidget.h  ShotTypeModel.cpp  ShotTypeModel.h  ShotTypeWidget.cpp  ShotTypeWidget.h  Toolkit.cpp  Toolkit.h  assClassModel.cpp  assClassModel.h  assClassWidget.cpp  assClassWidget.h  assDepWidget.cpp  assDepWidget.h  assSortfilterModel.cpp  assTableModel.cpp  assTableModel.h  assTableWidght.cpp  assTableWidght.h  assTypeModel.cpp  assTypeModel.h  assTypeWidget.cpp  assWidget.cpp  assWidget.h  doodleRigister.cpp  doodleRigister.h  episodesListModel.cpp  (+54 more)
doodle_server/: CMakeLists.txt  DoodleServer_global.h  main.cpp
doodle_server/src/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Project.cpp  Project.h  server.cpp  server.h  seting.cpp  seting.h
fileSystem/: CMakeLists.txt  fileSystem_cpp.h  fileSystem_global.h
fileSystem/src/: DfileSyntem.cpp  DfileSyntem.h  ftpsession.cpp  ftpsession.h
filesyn/: CMakeLists.txt  fileInfo.cpp  fileInfo.h  filesyn.cpp  filesyn.h  folderCompare.cpp  folderCompare.h  setting.cpp  setting.h  sqlConnect.cpp  sqlConnect.h
ftp/: CMakeLists.txt  ftp_global.h
ftp/src/: ftphandle.cpp  ftphandle.h  ftpparse.cpp  ftpparse.h  ftpsession.cpp  ftpsession.h
logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerTemplate.h
pinyin/: CMakeLists.txt  pinyin_global.h
pinyin/src/: convert.cpp  convert.h
script/: .gitignore  CMakeLists.txt  GUP_time.reg  LocalDumps.reg  ai.md  any_debug  create.sh  create_wsl_doodle_ngiax.sh  doodle_auto_light_process.ps1  export_denoiser_onnx.py  fix.sql  fix_old.ps1  fix_olf.ps1  git_local.cmd  install_rpc_service.ps1  link_clangd_debug.cmd  link_clangd_debug_maya.cmd  ma_to_fbx.ps1  maya_test.py  note  open_glances.cmd  oraios.cmd  out_all_txt.py  run_auto_test.ps1  run_debug.ps1  server_test.py  show_doc.cmd  studiolibrary_fix.cmd  sy.reg  sy_debug.reg  test.py  test_jurisdiction.bat  test_jurisdiction.ps1  tmp3.patch  tools.ps1  tools.py  torch.ipynb  ue4_rig.reg  ue_install.wxs  修正windows编码问题.ps1  (+7 more)
script/Cmd_tool/: cmd_run.bat  delete_Ue4_tmp.bat  getSysInfo.ps1  jindie.bat  map_1.ps1  map_net_disk.ps1  map_net_disk_9_dong.ps1  map_sysDir.ps1  map_sysDir_server.ps1  map_sys_dir_gui.ps1  run.bat  test.session
script/SqlTool/: delete_data.txt
script/create_db/: .gitignore  create_database.py  create_test_data.py
script/maya/: Doodle.mod  doodle.mod
script/tools/: CMakeLists.txt
script/uePlug/: .gitignore  build_5.1.cmd  build_5.cmd  build_ue_VDB.cmd  build_ue_plug.cmd  build_ue_plug_HW.cmd  make_lnk_ue_prj_lnk.cmd  make_lnk_ue_source_lnk.cmd  not_work  screenshot.py
src/: CMakeLists.txt  DoodleExe.manifest  win_exe.rc
src/DoodleExe/: CMakeLists.txt  DoodleApp.cpp  DoodleApp.h  DoodleGui.cmake  ListFile.cmake
src/DoodleLib/: CMakeLists.txt  DoodleApp.cpp  DoodleApp.h  DoodleLib.cmake  DoodleLib.cpp  DoodleLib.h  DoodleLib_fwd.h  DoodleLib_pch.h  DoodleMacro.h  ListFile.cmake  core_Cpp.h  doodleLib_fwd.h  doodle_app.cpp  doodle_app.h  doodle_lib.cmake  doodle_lib_all.h  doodle_lib_fwd.h  doodle_lib_pch.h  list_file.cmake  winDoodleLib.rc
src/ai_art/: main.py  my.yml
src/cmd_debug/: build_debug_venv.cmd  build_maya_plug.cmd  build_maya_plug_debug.cmd  cmake_clear.cmd  config_cmake.cmd
src/corelib/: CMakeLists.txt  archiveFactory.cpp  archiveFactory.h  core_Cpp.h  core_global.h  imageSequenArchive.h
src/doodle_GUI/: CMakeLists.txt  core_cpp_qt.h  doodle_global.cpp  doodle_global.h  main.cpp  main.h  resource.qrc  win_exe.rc
src/doodle_app/: CMakeLists.txt  doodle_app_fwd.h  doodle_app_macro.h
src/doodle_cloud_drive/: CMakeLists.txt  cloud_drive.h  main.cpp
src/doodle_core/: CMakeLists.txt  doodle_core.h  doodle_core_fwd.h  doodle_core_pch.h  doodle_macro.h
src/doodle_dingding/: CMakeLists.txt  doodle_dingding_fwd.h
src/doodle_exe/: CMakeLists.txt  DoodleGui_fwd.h  ListFile.cmake
src/doodle_lib/: CMakeLists.txt  doodle_app.cpp  doodle_app.h  doodle_lib.cmake  doodle_lib.manifest  doodle_lib_all.cpp  doodle_lib_all.h  doodle_lib_fwd.h  doodle_lib_pch.h  doodle_macro.h  list_file.cmake
src/doodle_main_exe/: CMakeLists.txt
src/doodle_plug_lib/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt  doodle_test.manifest  main.cpp  sqlite.sql  test_boost.cpp  test_convert.cpp  test_core.cpp  test_ffmpeg.cpp  test_fileSystem.cpp  test_ftp.cpp  test_opencv.cpp  test_qtCore.cpp  test_server.cpp  test_std.cpp
(+4067 files in other folders)
